# wasmer-as

./: .gitignore  Cargo.toml  README.md  Readme.md  flake.nix  get-string.ts  get-string.wasm
.github/: dependabot.yml
.github/workflows/: ci.yml  rust.yml
src/: buffer_ptr.rs  env.rs  lib.rs  string_ptr.rs  tools.rs
test-wasm/: package-lock.json  package.json
test-wasm/assembly/: index.ts
tests/: buffer.wasm  buffer.wat  runtime_exported.wat  sort_buffer.wasm  strings.rs  test_features.rs  test_wat.wat
